updated the naming of each apps

--- a/templates/home.html
+++ b/templates/home.html
@@ -70,7 +70,7 @@
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 mt-5">
             <div class="card mb-3">
-                <a href="{% url 'gas' %}" class="card-header">Gas Station</a>
+                <a href="{% url 'gas' %}" class="card-header">Manage Gas Station informations</a>
                 <div class="card-body">
                     <p class="card-text">View all <strong>Gas Station</strong> data.
                     </p>
@@ -79,18 +79,18 @@
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 mt-5">
             <div class="card mb-3">
-                <a href="{% url 'prices' %}" class="card-header">Price Management</a>
+                <a href="{% url 'prices' %}" class="card-header">List of Fuel Prices</a>
                 <div class="card-body">
-                    <p class="card-text">View all <strong>Price</strong> data.
+                    <p class="card-text">View all list of <strong>Fuel Prices</strong> data.
                     </p>
                 </div>
             </div>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 mt-5">
             <div class="card mb-3">
-                <a href="{% url 'fuels' %}" class="card-header">Fuel Type</a>
+                <a href="{% url 'prices' %}" class="card-header">List of Gasoline Stations</a>
                 <div class="card-body">
-                    <p class="card-text">View all <strong>Fuel type</strong> data.
+                    <p class="card-text">View all names of <strong>Gasoline Stations</strong> data.
                     </p>
                 </div>
             </div>
