--- a/templates/price/PriceTable.html
+++ b/templates/price/PriceTable.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div id="pos-price" v-cloak>
     <div class="mt-3">
-        <h1>Manage Fuel Prices</h1>
+        <h1>Manage List of Fuel Prices</h1>
         <hr>
         <div class="form-row">
             <div class="btn-group" role="group" aria-label="Basic example">
