removed types of fuel in the project and revised the gasoline staion in the home

--- a/templates/home.html
+++ b/templates/home.html
@@ -88,7 +88,7 @@
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 mt-5">
             <div class="card mb-3">
-                <a href="{% url 'prices' %}" class="card-header">List of Gasoline Stations</a>
+                <a href="{% url 'gasoline-stations' %}" class="card-header">List of Gasoline Stations</a>
                 <div class="card-body">
                     <p class="card-text">View all names of <strong>Gasoline Stations</strong> data.
                     </p>
