--- a/templates/auth_layout.html
+++ b/templates/auth_layout.html
@@ -16,8 +16,8 @@
 {% endblock %}
 
 {% block content %}
-<div class="outer-area">
-    <div class="auth-box">
+<div class="row justify-content-center">
+    <div class="outer-area col-md-6 col-sm-12">
         {% block auth %}
         {% endblock %}
     </div>
